# librarian

./: LICENSE  README.md
docs/: pseudocode_slack_bot.md  pseudocode_website.md
ingest/: README.md  pyproject.toml
ingest/config/: config.example.yaml
ingest/src/ingest/: __init__.py  batch.py  cli.py  config.py  models.py  pipeline.py
ingest/src/ingest/agents/: __init__.py  base.py  bibliography.py  chapter_summary.py  committee.py  genre_tags.py  key_quotes.py  overview.py  technical_concepts.py  themes.py  vlm.py
ingest/src/ingest/chunking/: __init__.py  chunker.py
ingest/src/ingest/extractors/: __init__.py  base.py  epub.py  pdf.py
ingest/src/ingest/storage/: __init__.py  embeddings.py  qdrant.py
ingest/src/ingest/utils/: __init__.py  logging.py
